--- a/nginx.conf
+++ b/nginx.conf
@@ -9,5 +9,10 @@ http {
         location / {
             try_files $uri $uri/ /index.html;
         }
+
+        location /backend {
+            rewrite /backend(.*) $1 break;
+            proxy_pass http://currency-converter:8008;
+        }
     }
 }
